--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -1,23 +1,18 @@
-name: "📚 Blog Updater"
-
+name: Lastest Hashnode Blog Post
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *' # Runs Every Day
+    # Runs every hour
+    - cron: '0 * * * *'
+  workflow_dispatch:
 
 jobs:
-  update_blogs:
-    name: "Update Blogs"
+  update-readme-with-blog:
+    name: Update this repo's README with latest Hashnode blog posts
     runs-on: ubuntu-latest
     steps:
-      - name: "📥  Fetching Repository Contents"
-        uses: actions/checkout@main
-
-      - name: "📚  Hashnode Updater"
-        uses: "varunsridharan/action-hashnode-blog@main"
+      - uses: actions/checkout@v2
+      - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          USERNAME: 'selftaughtdev' # Hashnode Username
-          BLOG_URL: 'https://selftaughtdev.me/' # Blog URL
-          COUNT: 10 # MAX Visisble
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          comment_tag_name: "HASHNODE"
+          commit_message: "Updated readme with the latest Hashnode Blog data"
+          feed_list: "https://polilluminato.hashnode.dev/rss.xml"
