--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -1,18 +1,15 @@
-name: Lastest Hashnode Blog Post
+name: Latest blog post workflow
 on:
   schedule:
     # Runs every hour
     - cron: '0 * * * *'
-  workflow_dispatch:
 
 jobs:
   update-readme-with-blog:
-    name: Update this repo's README with latest Hashnode blog posts
+    name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          comment_tag_name: "HASHNODE"
-          commit_message: "Updated readme with the latest Hashnode Blog data"
-          feed_list: "https://polilluminato.hashnode.dev/rss.xml"
+          feed_list: "https://selftaughtdev.me/rss.xml"
