--- a/.github/workflows/get_new_blogs.yml
+++ b/.github/workflows/get_new_blogs.yml
@@ -1,16 +1,23 @@
-name: Latest blog post workflow
+name: "📚 Blog Updater"
+
 on:
     workflow_dispatch:
     schedule:
-        # Runs every hour
-        - cron: "0 * * * *"
+        - cron: "0 0 * * *" # Runs Every Day
 
 jobs:
-    update-readme-with-blog:
-        name: Update this repo's README with latest blog posts
+    update_blogs:
+        name: "Update Blogs"
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - uses: varunsridharan/demo-action-hashnode-blog@main
+            - name: "📥  Fetching Repository Contents"
+              uses: actions/checkout@main
+
+            - name: "📚  Hashnode Updater"
+              uses: "varunsridharan/action-hashnode-blog@main"
               with:
-                  feed_list: "https://selftaughtdev.me/rss.xml"
+                  USERNAME: "selftaughtdev"
+                  COUNT: 6
+                  STYLE: "blog-grid"
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
